--- a/actualites-11.html
+++ b/actualites-11.html
@@ -17,7 +17,6 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
   
   
   <title>Soutenance réussie de projets par les étudiants français</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -133,12 +132,12 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZrwZQjd4" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZyx5Ts3L" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrwZQjd4" data-bs-target="#tmZrwZQjd4"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrwZQjd4" data-bs-target="#tmZrwZQjd4"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrwZQjd4" data-bs-target="#tmZrwZQjd4"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZyx5Ts3L" data-bs-target="#tmZyx5Ts3L"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZyx5Ts3L" data-bs-target="#tmZyx5Ts3L"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZyx5Ts3L" data-bs-target="#tmZyx5Ts3L"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -160,11 +159,11 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrwZQjd4">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZyx5Ts3L">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrwZQjd4">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZyx5Ts3L">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -203,7 +202,7 @@ Depuis 2020, les étudiants de notre Université et de l'école-partenaire parti
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gV5kSmiTRnSB3sOz4HJkwXL0zU6Y6XlD5lbsMYNFOSMSibNxl1zHlDAkDWFfRFh0H+iSP2JxQ/0btAs+gOo8TJy96QmCxUdMZDqEccxi/Plizr88zm/vUXhUff8EkT3L">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Ewg+0zVaDK2ET7Pndlk3imdzTJPe3aBQUqftXJZlUCl/o5+B0TJh3ucsEmTgaJ5xKcznMSPVmr84Ts+KM2zzkEPV6tnhOOfxNLIutOHMYOmwn3Ukl/EVciK0Rg0C4WNE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
