--- a/actualites-6.html
+++ b/actualites-6.html
@@ -15,7 +15,6 @@
   
   
   <title>Assises universitaires du français « Coopérations universitaires dans le domaine de la didactique et de la linguistique, mobilité des étudiants et des enseignants »</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -131,12 +130,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZrtMsfN5" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZytgJLOt" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZrtMsfN5" data-bs-target="#tmZrtMsfN5"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZytgJLOt" data-bs-target="#tmZytgJLOt"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZytgJLOt" data-bs-target="#tmZytgJLOt"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZytgJLOt" data-bs-target="#tmZytgJLOt"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZytgJLOt" data-bs-target="#tmZytgJLOt"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -163,11 +162,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrtMsfN5">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZytgJLOt">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrtMsfN5">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZytgJLOt">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -199,7 +198,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Elg1+R6/2oTaOcZjWpwWC9Zqn2C4Ngakpv+IvbZBU/fXb5VYp5OnTh0/rbcRF2LRrWNQyg9IJ5n3U/nLd44eKAA4YlfKjv5y8chX/b/FIQBis4hXX0oD0yz93JUpfSjK">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="5aUcFUl/OQMr7aHW9jLspZ6yLV30XRTpi3rH+Yt2L75b+p2IM6jMDCQd9oQZnksF1yv6sEE+X+BEdo/F/bE9v2bvaURp80JHjWzbcBb8L8/w22sIytPmYHMRMx/kHGp+">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -300,7 +299,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
