--- a/malinowski.html
+++ b/malinowski.html
@@ -18,7 +18,6 @@ Passionné d'histoire et d'archéologie, il donne des conférences aux étudiant
   
   
   <title>Pierre MALINOWSKI, président de la Fondation Pour Le Développement Des Initiatives Historiques Franco-Russes</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -177,7 +176,7 @@ Passionné d'histoire et d'archéologie, il donne des conférences aux étudiant
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fOKRgei1/l3CgEg7S8CdREXZ/peuIlZVCcsRUxMCmUGH0wGHbyAdV5jnFI+lU6BQuUIUuVlbeGdrix2fEXyKWtDVxYVmyAit4ltcLtRwtIGfMFyZK7i+tJD7+qA+FD/f">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="UirSyJX1MuxIB/5rTFuDkZ5x/7uSNONw07jGofco3JqK8I0C0KA590aQgyERKP2JU8aFNjm0zujYqVYy2eQzqXFK1xGvn0Bl+Xr7GHnAuAb/I0+UjDP2yollDEiLn3zd">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -278,7 +277,7 @@ Passionné d'histoire et d'archéologie, il donne des conférences aux étudiant
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
