--- a/actualites-10.html
+++ b/actualites-10.html
@@ -16,7 +16,6 @@ Au premier semestre de l'année 2021-2022, Miguel BLANCO, étudiant à l’Écol
   
   
   <title>Un étudiant français a effectué son stage avec succès</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -132,12 +131,12 @@ Au premier semestre de l'année 2021-2022, Miguel BLANCO, étudiant à l’Écol
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZrwJnF71" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZywM8HMg" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrwJnF71" data-bs-target="#tmZrwJnF71"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrwJnF71" data-bs-target="#tmZrwJnF71"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrwJnF71" data-bs-target="#tmZrwJnF71"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZywM8HMg" data-bs-target="#tmZywM8HMg"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZywM8HMg" data-bs-target="#tmZywM8HMg"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZywM8HMg" data-bs-target="#tmZywM8HMg"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -159,11 +158,11 @@ Au premier semestre de l'année 2021-2022, Miguel BLANCO, étudiant à l’Écol
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrwJnF71">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZywM8HMg">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrwJnF71">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZywM8HMg">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -198,7 +197,7 @@ Au premier semestre de l'année 2021-2022, Miguel BLANCO, étudiant à l’Écol
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="grle3YqaujlJr2J+K5DGDLTCSt2ZAn0CPhlLEzEYACDQNYdk5ceqx5R7lSJ08v5hXz9fuywhgw3p3jubiG52Ek6uj1gqyQhFJyVvY/9ciEuM0sAgd+FFlpSHde5bAlm5">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="EIKjBgYxbNbXbtmUbwurm/aTJPSo9BdC44R/92QVY86+ciPQ91locuJYXBOBZJH8IQGCQep9oR6a7gOCN11N3XHbvOmBPBI7bOD/XEU20YXlctOd2cajeyhqTlR68uEf">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
