--- a/actualites-15.html
+++ b/actualites-15.html
@@ -15,12 +15,10 @@
   
   
   <title>Stage : expérience professionnelle et belles impressions</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
@@ -164,11 +162,11 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZrzZ7cCN" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZyACjoGx" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tmZrzZ7cCN" data-bs-target="#tmZrzZ7cCN"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li><li data-slide-to="5" data-bs-slide-to="5" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li><li data-slide-to="6" data-bs-slide-to="6" data-target="#tmZyACjoGx" data-bs-target="#tmZyACjoGx"></li>
                         
                     </ol>
                     <div class="carousel-inner">
@@ -211,11 +209,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrzZ7cCN">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZyACjoGx">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrzZ7cCN">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZyACjoGx">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -233,7 +231,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="aTJ2IdhPxmuRTkReogCh8p6mrYuSCarSFPgMJFl8KseKyuRLnjjr5b3inXiNtt3Zqmje6updeQkFmRbKf02Cuvey2tAAxMeEEfHe7gCSHv+rSlBD339PYSRWvow6b34K">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="fh4ONeXAgyUm8sTzF82c78dCnwzRh3WIT24A4JwfX7XF7ZNEUtJFB65ZsuQdD5BRexZlhEKTR2xpmaS6A78TWYvRfn5yIzCBcNujB5H3PTSxv9/AgEFKRKh+YXTOv4sM">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -334,7 +332,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
