--- a/projets-3.html
+++ b/projets-3.html
@@ -15,12 +15,10 @@
   
   
   <title>Proposition d'exposition de l’illustrateur Éric Bouvet</title>
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
@@ -176,12 +174,12 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide" id="tmZrsYBMvT" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide" id="tmZyslK6CS" data-interval="5000" data-bs-interval="5000">
                     
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li>
-                        <li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZrsYBMvT" data-bs-target="#tmZrsYBMvT"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#tmZyslK6CS" data-bs-target="#tmZyslK6CS"></li><li data-slide-to="1" data-bs-slide-to="1" class="" data-target="#tmZyslK6CS" data-bs-target="#tmZyslK6CS"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#tmZyslK6CS" data-bs-target="#tmZyslK6CS"></li>
+                        <li data-slide-to="3" data-bs-slide-to="3" data-target="#tmZyslK6CS" data-bs-target="#tmZyslK6CS"></li><li data-slide-to="4" data-bs-slide-to="4" data-target="#tmZyslK6CS" data-bs-target="#tmZyslK6CS"></li>
                     </ol>
                     <div class="carousel-inner">
                         
@@ -213,11 +211,11 @@
                             </div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZrsYBMvT">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#tmZyslK6CS">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZrsYBMvT">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#tmZyslK6CS">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -235,7 +233,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="x6YvJh8giuuu7jEIylRk5HvM6ubUYd4czNHyc11KxHETsbC3cj+oCBw8HMy+RZ/FLJDm2kL7Lwo4nrXEs5op+Gb4YL1oQ2BkBpjwqEHAhcJ017WhzatHBOukJ3cCTh2Y">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="iHZ5LIw15w+Kvo9maMZm6tGBjuMmBy9fU5DNGaFCLFhNtVHV7j3W6IUiy4jY4KleKRiev75Ur7ySb9fjVkBaevKZRH04KvRh15vRSTB0kOWZYB71NAXVlX/O0EqT2PGN">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -336,7 +334,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
