--- a/projetsencours.html
+++ b/projetsencours.html
@@ -19,7 +19,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
@@ -125,7 +124,7 @@
                     <div class="text-wrapper">
                         <h6 class="card-title mbr-fonts-style display-2"><strong>Nouveaux villages : concept de création et de développement de territoires avec des petites fermes et l'intégration internationale</strong></h6>
                         
-                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="annonces-16.html" target="_blank">LIEN</a></div>
+                        <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-4" href="projets-7.html" target="_blank">LIEN</a></div>
                     </div>
                 </div>
             </div>
@@ -189,7 +188,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="bGKHgzJFTJxV1BDwgEeO/TKH1OBs1ZRJEbWCgRtXsn4T6AmpVxb6bHlBUneooNj2BcydMead2c2lj6OKqLV/16ML8vd42r73Cg/HyuIq+ytfOJ1L57kMIYl4VjlaGPr4">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="4ucb6Nb91PaLOYklUb5CE6d7oAcAKtcxNAdGFM6WlNqfE21Iiof2V422CeO5qAdMUDorMbayDAA7NCmDzVkpU4EMKTvVCs8GqB+9+hs3o9DvgZ28jtts0CME6+ia2mYo">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci pour votre inscription !</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -290,7 +289,7 @@
             </div>
         </div>
     </div>
-</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
+</section><section id="top-1" hidden><a href="https://mobirise.site"></a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
